--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -77,11 +77,14 @@
   justify-content: center;
   flex-wrap: wrap;
 
-  max-width: 800px;
+  /* "1% ... width" sets grid to max window size
+  and will resize when needed */
+  max-width: 1% of viewport width;
   margin-top: 3rem;
 }
 
 .card {
+  max-width: 1% of viewport width;
   margin: 1rem;
   flex-basis: 45%;
   padding: 1.5rem;
@@ -111,6 +114,31 @@
   line-height: 1.5;
 }
 
+.cardProject {
+  max-width: 1% of viewport width;
+  margin: 10rem;
+  flex-basis: 45%;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+
+.cardProject h3 {
+  margin: 0 0 1.5rem 0;
+  font-size: 1.5rem;
+}
+
+.cardProject p {
+  margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
 .logo {
   height: 1em;
 }
@@ -120,4 +148,14 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.ProfilePic {
+  vertical-align: middle;
+  height: 400px;
+  border-radius: 50%;
+}
+.profileImage {
+  max-width: 100%;
+  height:auto;
 }
