--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,14 +1,20 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  min-height: 100%;
+  background: rgb(14,115,3);
+  background: linear-gradient(128deg, rgba(14,115,3,1) 0%, rgba(62,150,39,1) 13%, rgba(97,195,47,1) 38%, rgba(153,227,58,1) 75%, rgba(249,255,0,1) 100%);
 }
 
+.container_image_background {
+  min-height: 100%;
+  background-image: url("/img/green_wave_mp_2.png");
+  background-size: cover;
+}
+
+
 .main {
-  padding: 5rem 0;
+
+  /* top right bottom left */
+  padding: 0 0 0 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -99,8 +105,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #730899;
+  border-color: #730899;
 }
 
 .card h3 {
@@ -116,7 +122,7 @@
 
 .cardProject {
   max-width: 1% of viewport width;
-  margin: 10rem;
+  margin: 25px 50px 25px;
   flex-basis: 45%;
   padding: 1.5rem;
   text-align: left;
@@ -154,8 +160,25 @@
   vertical-align: middle;
   height: 400px;
   border-radius: 50%;
+  padding: 20px 0 0 0
 }
 .profileImage {
   max-width: 100%;
   height:auto;
+}
+
+.background {
+  /* The image used */
+  background-image: url("/public/green_wave_mp.png");
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  height: 100vh;
+  position: relative;
 }
